syntax = "proto3";
package nbrpc;

import "Types.proto";
import "Math.proto";
  
service NodeRpc
{
	rpc AddNode (AddNodeRequest) returns (CommonReply) {}
	rpc RemoveNode (RemoveNodeRequest) returns (CommonReply) {}
	rpc RenameNode (RenameNodeRequest) returns (CommonReply) {}
	rpc SetPropertyBool (SetPropertyBoolRequest) returns (CommonReply) {}
	rpc SetPropertyInt8 (SetPropertyInt8Request) returns (CommonReply) {}
	rpc SetPropertyInt16 (SetPropertyInt16Request) returns (CommonReply) {}
	rpc SetPropertyInt32 (SetPropertyInt32Request) returns (CommonReply) {}
	rpc SetPropertyInt64 (SetPropertyInt64Request) returns (CommonReply) {}
	rpc SetPropertyUInt8 (SetPropertyUInt8Request) returns (CommonReply) {}
	rpc SetPropertyUInt16 (SetPropertyUInt16Request) returns (CommonReply) {}
	rpc SetPropertyUInt32 (SetPropertyUInt32Request) returns (CommonReply) {}
	rpc SetPropertyUInt64 (SetPropertyUInt64Request) returns (CommonReply) {}
	rpc SetPropertyFloat (SetPropertyFloatRequest) returns (CommonReply) {}
	rpc SetPropertyDouble (SetPropertyDoubleRequest) returns (CommonReply) {}
	rpc SetPropertyString (SetPropertyStringRequest) returns (CommonReply) {}
	rpc SetPropertyVec2 (SetPropertyVec2Request) returns (CommonReply) {}
	rpc SetPropertyVec3 (SetPropertyVec3Request) returns (CommonReply) {}
	rpc SetPropertyVec4 (SetPropertyVec4Request) returns (CommonReply) {}
	rpc SetPropertyColor (SetPropertyColorRequest) returns (CommonReply) {}
	rpc SetPropertyDateTime (SetPropertyDateTimeRequest) returns (CommonReply) {}
	rpc SetPropertyTimeSpan (SetPropertyTimeSpanRequest) returns (CommonReply) {}
	rpc SetPropertyThickness (SetPropertyThicknessRequest) returns (CommonReply) {}
	rpc SetPropertyEnum (SetPropertyEnumRequest) returns (CommonReply) {}
	rpc SetPropertySolidColorBrush (SetPropertySolidColorBrushRequest) returns (CommonReply) {}
	rpc SetPropertyImageBrush (SetPropertyImageBrushRequest) returns (CommonReply) {}
	rpc SetPropertyLinearGradientBrush (SetPropertyLinearGradientBrushRequest) returns (CommonReply) {}
}

message AddNodeRequest
{
	string path = 1;
	string childType = 2;
	string childName = 3;
}
message RemoveNodeRequest
{
	string path = 1;
	string childName = 2;
}
message RenameNodeRequest
{
	string path = 1;
	string childOldName = 2;
	string childNewName = 3;
}
message SetPropertyBaseRequest
{
	string path = 1;
	uint64 propertyID = 2;
}
message SetPropertyBoolRequest
{
	SetPropertyBaseRequest base = 1;
	bool value = 2;
}
message SetPropertyInt8Request
{
	SetPropertyBaseRequest base = 1;
	int32 value = 2;
}
message SetPropertyInt16Request
{
	SetPropertyBaseRequest base = 1;
	int32 value = 2;
}
message SetPropertyInt32Request
{
	SetPropertyBaseRequest base = 1;
	int32 value = 2;
}
message SetPropertyInt64Request
{
	SetPropertyBaseRequest base = 1;
	int64 value = 2;
}
message SetPropertyUInt8Request
{
	SetPropertyBaseRequest base = 1;
	uint32 value = 2;
}
message SetPropertyUInt16Request
{
	SetPropertyBaseRequest base = 1;
	uint32 value = 2;
}
message SetPropertyUInt32Request
{
	SetPropertyBaseRequest base = 1;
	uint32 value = 2;
}
message SetPropertyUInt64Request
{
	SetPropertyBaseRequest base = 1;
	uint64 value = 2;
}
message SetPropertyFloatRequest
{
	SetPropertyBaseRequest base = 1;
	float value = 2;
}
message SetPropertyDoubleRequest
{
	SetPropertyBaseRequest base = 1;
	double value = 2;
}
message SetPropertyStringRequest
{
	SetPropertyBaseRequest base = 1;
	string value = 2;
}
message SetPropertyVec2Request
{
	SetPropertyBaseRequest base = 1;
	Vec2 value = 2;
}
message SetPropertyVec3Request
{
	SetPropertyBaseRequest base = 1;
	Vec3 value = 2;
}
message SetPropertyVec4Request
{
	SetPropertyBaseRequest base = 1;
	Vec4 value = 2;
}
message SetPropertyColorRequest
{
	SetPropertyBaseRequest base = 1;
	Color value = 2;
}
message SetPropertyDateTimeRequest
{
	SetPropertyBaseRequest base = 1;
	DateTime value = 2;
}
message SetPropertyTimeSpanRequest
{
	SetPropertyBaseRequest base = 1;
	TimeSpan value = 2;
}
message SetPropertyThicknessRequest
{
	SetPropertyBaseRequest base = 1;
	Thickness value = 2;
}
message SetPropertyEnumRequest
{
	SetPropertyBaseRequest base = 1;
	int32 value = 2;
}
message SetPropertySolidColorBrushRequest
{
	SetPropertyBaseRequest base = 1;
	Color value = 2;
}
message SetPropertyImageBrushRequest
{
	SetPropertyBaseRequest base = 1;
	string value = 2;
}
message SetPropertyLinearGradientBrushRequest
{
	SetPropertyBaseRequest base = 1;
	int32 value = 2;
}